css/styles.css
/* ... */
.hero-button:hover,
.hero-button:focus {
  background-color: #404bbf;
}

/* FEATURES */

.features-list {
  display: flex;
  gap: 24px;
}

.features-item {
  width: calc((100% - 72px) / 4);
}

.features-icon {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 112px;
  margin-bottom: 8px;
  border: 1px solid #8e8f99;
  border-radius: 4px;
  background-color: #f4f4fd;
}

.features-icon svg {
  width: 64px;
  height: 64px;
}

.feature-title {
  margin-bottom: 8px;
  font-size: 20px;
  font-weight: 500;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
}

.feature-description {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

/* TEAM */

.team-section {
  background-color: #f4f4fd;
}

.team-title {
  margin-bottom: 72px;
  font-size: 36px;
  font-weight: 700;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  text-transform: capitalize;
  color: #2e2f42;
}

.team-list {
  display: flex;
  gap: 24px;
}

.team-item {
  width: calc((100% - 72px) / 4);
  border-radius: 0 0 4px 4px;
  background-color: #ffffff;
  box-shadow:
    0px 1px 6px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16),
    0px 2px 1px rgba(46, 47, 66, 0.08);
}

.team-card-text {
  padding: 32px 16px;
}

.team-member-name {
  margin-bottom: 8px;
  font-size: 20px;
  font-weight: 500;
  line-height: 1.2;
  text-align: center;
  letter-spacing: 0.02em;
  color: #2e2f42;
}

.team-member-title {
  margin-bottom: 8px;
  font-size: 16px;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 0.02em;
}

.team-social-list {
  display: flex;
  justify-content: center;
  gap: 24px;
}

.team-social-item {
  width: 40px;
  height: 40px;
}

.team-social-link {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #4d5ae5;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.team-social-link:hover,
.team-social-link:focus {
  background-color: #404bbf;
}

.team-social-icon {
  fill: #f4f4fd;
}

/* PORTFOLIO */

.portfolio-title {
  margin-bottom: 72px;
  font-size: 36px;
  font-weight: 700;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  text-transform: capitalize;
  color: #2e2f42;
}

.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  column-gap: 24px;
  row-gap: 48px;
}

.portfolio-item {
  width: calc((100% - 48px) / 3);
}

.portfolio-link {
  display: block;
  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-link:hover,
.portfolio-link:focus {
  box-shadow:
    0px 1px 6px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16),
    0px 2px 1px rgba(46, 47, 66, 0.08);
}

.portfolio-thumb {
  position: relative;
  overflow: hidden;
}

.portfolio-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 40px 32px;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #f4f4fd;
  background-color: #4d5ae5;
  transform: translateY(100%);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-link:hover .portfolio-overlay,
.portfolio-link:focus .portfolio-overlay {
  transform: translateY(0%);
}

.portfolio-card-text {
  padding: 32px 16px;
  border: 1px solid #e7e9fc;
  border-top: none;
}

.portfolio-item-title {
  margin-bottom: 8px;
  font-size: 20px;
  font-weight: 500;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
}

.portfolio-item-text {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

/* FOOTER */

.page-footer {
  padding: 100px 0;
  background-color: #2e2f42;
}

.footer-subscribe-box {
  margin-left: 80px;
}

.footer-subscribe-title {
  margin-bottom: 16px;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #ffffff;
}

.footer-subscribe-form {
  display: flex;
  gap: 24px;
}

.footer-subscribe-input {
  width: 264px;
  height: 40px;
  padding-left: 16px;
  border: 1px solid #ffffff;
  border-radius: 4px;
  background-color: transparent;
  font-size: 12px;
  line-height: 2;
  letter-spacing: 0.04em;
  color: #ffffff;
  outline: transparent;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
}

.footer-subscribe-input::placeholder {
  color: #ffffff;
}

.footer-subscribe-button {
  min-width: 165px;
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 16px;
  border: none;
  border-radius: 4px;
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #ffffff;
  background-color: #4d5ae5;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-subscribe-button:hover,
.footer-subscribe-button:focus {
  background-color: #404bbf;
}

.footer-subscribe-icon {
  fill: #ffffff;
}

.backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(46, 47, 66, 0.4);
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  transition:
    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.backdrop.is-open {
  opacity: 1;
  visibility: visible;
  pointer-events: auto;
}

.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 408px;
  min-height: 584px;
  padding: 72px 24px 24px 24px;
  border-radius: 4px;
  background-color: #fcfcfc;
  box-shadow:
    0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 1px 3px rgba(0, 0, 0, 0.12),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  transform: translate(-50%, -50%);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
/* ... */

